--- a/layout/footer.html
+++ b/layout/footer.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head> </head>
+  <head>
+    <link rel="stylesheet" href="style/footer.css" />
+  </head>
 
   <body>
     <!-- footer -->
@@ -8,7 +10,7 @@
       <div class="footer_box">
         <div class="wrap">
           <div class="go_top on">
-            <div class="line"></div>
+            <div class="to_top_line"></div>
             <h2>PAGE TOP</h2>
             <a href="#"></a>
           </div>
@@ -60,12 +62,12 @@
           <div class="right_box on">
             <div class="title">SITE CONTENTS</div>
             <ul>
-              <li>飯店簡介</li>
-              <li>服務設施</li>
+              <li><a href="../page/introduction.html">飯店簡介</a></li>
+              <li><a href="../page/servers.html">服務設施</a></li>
               <li>客房介紹</li>
-              <li>交通位置</li>
-              <li>新訊與活動</li>
-              <li>聯絡我們</li>
+              <li><a href="../page/location.html">交通位置</a></li>
+              <li><a href="../page/latest.html">新訊與活動</a></li>
+              <li><a href="../page/contact.html">聯絡我們</a></li>
             </ul>
             <div class="txt">
               <p>Copyright © 2024 舞牛森度假飯店 All Rights Reserved.</p>
